  * The external special remote protocol got an ASYNC extension.
    This can be used by an external special remote to let a single process
    perform concurrent actions, rather than multiple processes being
    started, when that is more efficient.
  * Display warning when external special remote does not start up
    properly, or is not usable.
  * stack.yaml: Updated to lts-16.10.
  * Fix reversion in 7.20190322 that made addurl --file not be honored
    when youtube-dl was used to download media.
  * Fix reversion in 8.20200617 that made annex.pidlock being enabled
    result in some commands stalling, particularly those needing to
    autoinit.
  * Display a message when git-annex has to wait for a pid lock file
    held by another process.
  * test: Stop gpg-agent daemons that are started for the test framework's
    gpg key.
  * Support git remotes where .git is a file, not a directory,
    eg when --separate-git-dir was used.

 -- Joey Hess <id@joeyh.name>  Fri, 14 Aug 2020 14:57:45 -0400

git-annex (8.20200814) upstream; urgency=medium

  * Added support for external backend programs. So if you want a hash
    that git-annex doesn't support, or something stranger, you can write a
    small program to implement it.
  * Fix a bug in find --branch in the previous version.
  * importfeed: Fix reversion that caused some '.' in filenames to be
    replaced with '_'
  * Fix a lock file descriptor leak that could occur when running commands
    like git-annex add with -J. Bug was introduced as part of a different FD
    leak fix in version 6.20160318.
  * Fix a hang when using git-annex with an old openssh 7.2p2, which had
    some weird inheriting of ssh FDs by sshd. Bug was introduced in
    git-annex version 7.20200202.7.
  * move, copy --to: Sped up seeking files by 2x.
  * drop: Sped up seeking files to drop by 2x, and also some performance
    improvements to checking numcopies.
  * Deal with unusual IFS settings in the shell scripts for linux